Db Select autowires jdbc template